fix: overflow loading

--- a/src/components/layouts/preloader/style.module.scss
+++ b/src/components/layouts/preloader/style.module.scss
@@ -1,10 +1,11 @@
 .introduction {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   position: fixed;
+  inset: 0;
   z-index: 99;
   background-color: #ffffff;
   svg {
